# Computational-Intelligence-Project

./: LICENSE  README.md  game.py  human_player.py  investigate_game.py  main.py  mcts.py  min_max.py  monte_carlo.py  monte_carlo_rl.py  monte_carlo_rl_no_sim.py  project_summary.ipynb  pyproject.toml  q_learning.py  random_player.py  symmetry.py
players/: human_player.py  min_max.py  monte_carlo_rl.py  monte_carlo_tree_search.py
utils/: investigate_game.py  symmetry.py
