[tool.poetry]
name = "Computational-Intelligence-Project"
version = "0.1.0"
description = "Project for the Computational Intelligence course 23/24 - Politecnico di Torino"
authors = ["Davide Sferrazza", "Davide Vitabile"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.1"
ipykernel = "^6.25.2"
scipy = "^1.11.3"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"
matplotlib = "^3.8.1"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
